--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ go:
     - master
 
 before_install:
-    - go get github.com/hpeng526/wx-backend
-    - go get github.com/hpeng526/wx
+    - go get github.com/hpeng526/wx-backend/mq
+    - go get github.com/hpeng526/wx/template
     - go get github.com/mattn/go-sqlite3
 
 install:
