--- a/gateway_config.json
+++ b/gateway_config.json
@@ -1,5 +1,6 @@
 {
   "server_address" : "127.0.0.1:8080",
   "database": "./gateway.sqlite",
-  "mq_address": "127.0.0.1:6379"
+  "mq_address": "127.0.0.1:6379",
+  "key": "gateway"
 }
